# mdcPlayer

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  msgDef.cpp  msgDef.h  player.cpp  player.h  scriptConf.sh
cmake/: mdc_sdk.cmake
include/: msgDef.h  player.h
src/: player.cpp
